--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     <div class="step" id="step6">
       <h2>Select Date ☕</h2>
       <form name="submit-to-google-sheet">
-        <input type="datetime-local" name="Email" id="datetime" required>
-        <input type="text" name="Pass" id="message" placeholder="Leave a message" required>
+        <input type="datetime-local" name="Date" id="datetime"  required>
+        <input type="email" name="Email" id="email" placeholder="Leave your email here"  required>
+        <input type="text" name="Massage" id="datetime" placeholder="Leave a message" required>
         <button type="submit">Confirm</button>
       </form>
     </div>
